Closed Bug 1011659 Opened 11 years ago Closed 11 years ago

Console spam "WARNING: Already have a paint with this sequence number"

Categories

(Core :: Panning and Zooming, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: mccr8, Assigned: botond)

References

Details

Attachments

(1 file)

When I run a local debug build, the console is being spammed with this: [26152] WARNING: Already have a paint with this sequence number: file ../../dist/include/mozilla/layers/APZTestData.h, line 50 I get this message 40 times in the first 10 seconds after browser start, with just the empty tab open.
This is also spamming TBPL logs. In a M1 10.8 debug log, I see this warning a little over 11000 times, so Ryan if we start overflowing logs, this is probably to blame.
These warnings should go away when bug 1007728 is fixed. Until then, I will disable them to avoid log spammage.
Assignee: nobody → botond
Attached patch bug1011659.patchSplinter Review
Attachment #8424126 - Flags: review?(bugmail.mozilla)
Attachment #8424126 - Flags: review?(bugmail.mozilla) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: