Bug 1011659 - Remove spammy warnings from APZTestData.h until fixing bug 1007728 makes them non-spammy and meaningful. r=kats